--- a/haskell-midi.cabal
+++ b/haskell-midi.cabal
@@ -70,6 +70,7 @@ test-suite haskell-midi-test
     , tasty-quickcheck
     , bytestring
     , binary
+    , binary-strict
   other-modules:
       Paths_haskell_midi
   default-language: Haskell2010
