--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps: 
 - binary-strict-0.4.8.3
+- time-units-1.0.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
